syntax = "proto3";

option java_package = "model.proto";
option java_multiple_files = true;

message Test2 {
    string b = 2;
}