syntax = "proto3";

option java_package = "model.proto";
option java_multiple_files = true;

message Test4 {
    fixed32 d = 4;
}